Dicionário de dados

--- a/Seach_client.ipynb
+++ b/Seach_client.ipynb
@@ -13,7 +13,7 @@
    "id": "2dd66228",
    "metadata": {},
    "source": [
-    "### Blibliotecas\n"
+    "### Bliblioteca utilizadas\n"
    ]
   },
   {
